--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
     <ul>
-        <li><a href=" Dynamic Greeting.html">ques1</a></li>
-        <li><a href="Interactive Quiz.html">ques2</a></li>
-        <li><a href="JavaScript Calculator.html">ques3</a></li>
-        <li><a href="Form Validation.html">ques4</a></li>
+        <li><a href=" Dynamic Greeting.html">Dynamic Greeting</a></li>
+        <li><a href="Interactive Quiz.html">Interactive Quiz</a></li>
+        <li><a href="JavaScript Calculator.html">JavaScript Calculator</a></li>
+        <li><a href="Form Validation.html">Form Validation</a></li>
     </ul>
 </body>
 </html>
